@@ -48,3 +48,10 @@ let List.(String.(_)) = 'd'
 
 let List.(_) : float = 42.0
 ;;
+
+(* issue #12257: external or module alias followed by regular value triggers
+   an exception in ocamlnat *)
+external foo : int -> int -> int = "%addint"
+module S = String
+let x = 42
+;;
