@@ -34,15 +34,17 @@ let global_symbol id =
 
 let remembered = ref Ident.empty
 
-let rec remember phrase_name i = function
-  | [] -> ()
-  | Sig_value  (id, _, _) :: rest
-  | Sig_module (id, _, _, _, _) :: rest
-  | Sig_typext (id, _, _, _) :: rest
-  | Sig_class  (id, _, _, _) :: rest ->
-      remembered := Ident.add id (phrase_name, i) !remembered;
-      remember phrase_name (succ i) rest
-  | _ :: rest -> remember phrase_name i rest
+let remember phrase_name signature =
+  let exported = List.filter Includemod.is_runtime_component signature in
+  List.iteri (fun i sg ->
+      match sg with
+      | Sig_value  (id, _, _)
+      | Sig_module (id, _, _, _, _)
+      | Sig_typext (id, _, _, _)
+      | Sig_class  (id, _, _, _) ->
+          remembered := Ident.add id (phrase_name, i) !remembered
+      | _ -> ())
+    exported
 
 let toplevel_value id =
   try Ident.find_same id !remembered
@@ -197,7 +199,7 @@ let execute_phrase print_outcome ppf phr =
             Translmod.transl_implementation_flambda phrase_name
               (str, Tcoerce_none)
           in
-          remember module_ident 0 sg';
+          remember module_ident sg';
           module_ident, close_phrase res, required_globals, size
         else
           let size, res = Translmod.transl_store_phrases phrase_name str in
